force-app/main/default/objects/Deal__c/fields/destination_NZ__c.field-meta.xml
<CustomField>
    <fullName>destination_NZ__c</fullName>
    <label>Landing Page Destination - NZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>