force-app/main/default/objects/Deal__c/fields/Diamond_deal__c.field-meta.xml
<CustomField>
    <fullName>Diamond_deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in TC portal</description>
    <label>Diamond deal</label>
    <type>Checkbox</type>
</CustomField>