force-app/main/default/objects/Deal__c/fields/Disable_TC_Hold__c.field-meta.xml
<CustomField>
    <fullName>Disable_TC_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable TC Hold</label>
    <type>Checkbox</type>
</CustomField>