force-app/main/default/objects/Deal__c/fields/Display_as_tour_deal_layout__c.field-meta.xml
<CustomField>
    <fullName>Display_as_tour_deal_layout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display as tour deal layout</label>
    <type>Checkbox</type>
</CustomField>