force-app/main/default/objects/Deal__c/fields/Display_Category__c.field-meta.xml
<CustomField>
    <fullName>Display_Category__c</fullName>
    <label>Display Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>Stay</fullName>
            </value>
            <value>
                <fullName>Escape</fullName>
                <isActive>false</isActive>
                <label>Escape</label>
            </value>
            <value>
                <fullName>Tour</fullName>
                <isActive>false</isActive>
                <label>Tour</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>