force-app/main/default/objects/Deal__c/fields/Display_Deal_Price__c.field-meta.xml
<CustomField>
    <fullName>Display_Deal_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Deal Price</label>
    <type>Checkbox</type>
</CustomField>