force-app/main/default/objects/Deal__c/fields/Display_Tour_Escapes__c.field-meta.xml
<CustomField>
    <fullName>Display_Tour_Escapes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Tour &amp; Escapes</label>
    <type>Checkbox</type>
</CustomField>