force-app/main/default/objects/Deal__c/fields/eDM_Count__c.field-meta.xml
<CustomField>
    <fullName>eDM_Count__c</fullName>
    <label>eDM Count</label>
    <summaryFilterItems>
        <field>Marketing_Spend__c.Marketing_Channel__c</field>
        <operation>equals</operation>
        <value>Electronic Direct Mail (eDM)</value>
    </summaryFilterItems>
    <summaryForeignKey>Marketing_Spend__c.Deal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>