force-app/main/default/objects/Deal__c/fields/Email_Merchant_Confirmations_3__c.field-meta.xml
<CustomField>
    <fullName>Email_Merchant_Confirmations_3__c</fullName>
    <label>Email - Merchant Confirmations 3</label>
    <type>Email</type>
</CustomField>