force-app/main/default/objects/Deal__c/fields/Email_Merchant_Confirmations__c.field-meta.xml
<CustomField>
    <fullName>Email_Merchant_Confirmations__c</fullName>
    <label>Email - Merchant Confirmations</label>
    <type>Email</type>
</CustomField>