force-app/main/default/objects/Deal__c/fields/end_date__c.field-meta.xml
<CustomField>
    <fullName>end_date__c</fullName>
    <label>Website end date</label>
    <type>Date</type>
</CustomField>