force-app/main/default/objects/Deal__c/fields/end_date_nz__c.field-meta.xml
<CustomField>
    <fullName>end_date_nz__c</fullName>
    <label>End Date - NZ</label>
    <type>Date</type>
</CustomField>