force-app/main/default/objects/Deal__c/fields/Escape_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Escape_Confirmation__c</fullName>
    <description>This will be included on customer confirmation emails</description>
    <inlineHelpText>This will be included on customer confirmation emails</inlineHelpText>
    <label>Escape Confirmation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>