force-app/main/default/objects/Deal__c/fields/Escape_Stay_Deal__c.field-meta.xml
<CustomField>
    <fullName>Escape_Stay_Deal__c</fullName>
    <formula>OR( Is_Escapes__c ,
 show_as_escape__c ,
 INCLUDES(  deal_type__c , &quot;stay&quot;) ,
 INCLUDES( deal_type_nz__c , &quot;stay&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ie. (Is Escape Deal = TRUE) OR (Show as Escape = TRUE) OR (deal type includes STAY)</inlineHelpText>
    <label>Escape/Stay Deal</label>
    <type>Checkbox</type>
</CustomField>