force-app/main/default/objects/Deal__c/fields/Estimated_Lead_In_Margin_without_flights__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Lead_In_Margin_without_flights__c</fullName>
    <label>Estimated Lead-In Margin without flights</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>