force-app/main/default/objects/Deal__c/fields/Estimated_margin_group_size_assumption__c.field-meta.xml
<CustomField>
    <fullName>Estimated_margin_group_size_assumption__c</fullName>
    <label>Estimated margin group size assumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>