force-app/main/default/objects/Deal__c/fields/Estimated_Margin_NZ__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Margin_NZ__c</fullName>
    <label>Estimated Lead-In Margin - NZ</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>