force-app/main/default/objects/Deal__c/fields/Estimated_Weighted_Margin__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Weighted_Margin__c</fullName>
    <label>Estimated Weighted Margin</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>