force-app/main/default/objects/Deal__c/fields/Estimated_Weighted_Margin_w_o_flights_NZ__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Weighted_Margin_w_o_flights_NZ__c</fullName>
    <label>Estimated Weighted Margin w/o flights NZ</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>