force-app/main/default/objects/Deal__c/fields/Exclusive_Override__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusive Override</label>
    <type>Checkbox</type>
</CustomField>