force-app/main/default/objects/Deal__c/fields/Feature_label_icons__c.field-meta.xml
<CustomField>
    <fullName>Feature_label_icons__c</fullName>
    <label>Feature label icons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>accommodation</fullName>
            </value>
            <value>
                <fullName>add-flights</fullName>
            </value>
            <value>
                <fullName>cruise</fullName>
            </value>
            <value>
                <fullName>dates-later</fullName>
            </value>
            <value>
                <fullName>flights</fullName>
            </value>
            <value>
                <fullName>rail</fullName>
            </value>
            <value>
                <fullName>tour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>