force-app/main/default/objects/Deal__c/fields/ff_GST_Sales_Rule__c.field-meta.xml
<CustomField>
    <fullName>ff_GST_Sales_Rule__c</fullName>
    <label>GST Sales Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GST free</fullName>
            </value>
            <value>
                <fullName>GST on commission</fullName>
            </value>
            <value>
                <fullName>GST on Total Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>