force-app/main/default/objects/Deal__c/fields/Final_Booking_Confirms_Report__c.field-meta.xml
<CustomField>
    <fullName>Final_Booking_Confirms_Report__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;/lightning/r/00O0K00000AEK7K/view?fv0=&quot;, 
&quot;/00O0K00000AEK7K?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Final Booking Confirm Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Booking Confirms Report</label>
    <type>Text</type>
</CustomField>