force-app/main/default/objects/Deal__c/fields/Finance_Approval_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Date_Completed__c</fullName>
    <label>Finance Approval - Date Completed</label>
    <type>Date</type>
</CustomField>