force-app/main/default/objects/Deal__c/fields/Finance_Approval_Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Date_Submitted__c</fullName>
    <label>Finance Approval - Date Submitted</label>
    <type>Date</type>
</CustomField>