force-app/main/default/objects/Deal__c/fields/Fine_Print__c.field-meta.xml
<CustomField>
    <fullName>Fine_Print__c</fullName>
    <inlineHelpText>Label name change - from Fine Print to Important Info (KB 27/02/19)</inlineHelpText>
    <label>Important Information</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>