force-app/main/default/objects/Deal__c/fields/fine_print_nz__c.field-meta.xml
<CustomField>
    <fullName>fine_print_nz__c</fullName>
    <inlineHelpText>Label name change - from Fine Print - NZ to Important Info - NZ (KB 27/02/19)</inlineHelpText>
    <label>Important Information - NZ</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>