force-app/main/default/objects/Deal__c/fields/Flight_Book_By__c.field-meta.xml
<CustomField>
    <fullName>Flight_Book_By__c</fullName>
    <label>Flight Book By</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>