force-app/main/default/objects/Deal__c/fields/Flight_Manifest_POE__c.field-meta.xml
<CustomField>
    <fullName>Flight_Manifest_POE__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;,
&quot;/lightning/r/00O2x000002BXWa/view?fv0=&quot;,
&quot;/00O2x000002BXWa?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Flight Manifest (POE) Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Manifest (POE) Report</label>
    <type>Text</type>
</CustomField>