force-app/main/default/objects/Deal__c/fields/Flight_Manifest_Report__c.field-meta.xml
<CustomField>
    <fullName>Flight_Manifest_Report__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;/lightning/r/00O0K00000AOxQI/view?fv0=&quot;, 
&quot;/00O0K00000AOxQI?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Flight Manifest Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Manifest Report</label>
    <type>Text</type>
</CustomField>