force-app/main/default/objects/Deal__c/fields/Flights_Max_Nett__c.field-meta.xml
<CustomField>
    <fullName>Flights_Max_Nett__c</fullName>
    <label>Flights Max Nett</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>