force-app/main/default/objects/Deal__c/fields/Flights_Ticketed_by_UJ__c.field-meta.xml
<CustomField>
    <fullName>Flights_Ticketed_by_UJ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flights Ticketed by UJ?</label>
    <type>Checkbox</type>
</CustomField>