force-app/main/default/objects/Deal__c/fields/From_Charges__c.field-meta.xml
<CustomField>
    <fullName>From_Charges__c</fullName>
    <defaultValue>true</defaultValue>
    <label>From Charges</label>
    <type>Checkbox</type>
</CustomField>