force-app/main/default/objects/Deal__c/fields/Group_Structure__c.field-meta.xml
<CustomField>
    <fullName>Group_Structure__c</fullName>
    <inlineHelpText>Please select either &quot;Group&quot; of &quot;FIT&quot; for the correct group type for this deal.</inlineHelpText>
    <label>Group Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>FIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>