force-app/main/default/objects/Deal__c/fields/GST_NZ__c.field-meta.xml
<CustomField>
    <fullName>GST_NZ__c</fullName>
    <label>GST NZ: TNZ Orders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GST free</fullName>
            </value>
            <value>
                <fullName>GST on commission</fullName>
            </value>
            <value>
                <fullName>GST on Total Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>