force-app/main/default/objects/Deal__c/fields/Guests__c.field-meta.xml
<CustomField>
    <fullName>Guests__c</fullName>
    <label>Guests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Romantic</fullName>
            </value>
            <value>
                <fullName>Singles</fullName>
            </value>
            <value>
                <fullName>Older</fullName>
            </value>
            <value>
                <fullName>Middle age</fullName>
            </value>
            <value>
                <fullName>Couples</fullName>
            </value>
            <value>
                <fullName>Groups</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>