force-app/main/default/objects/Deal__c/fields/has_flights__c.field-meta.xml
<CustomField>
    <fullName>has_flights__c</fullName>
    <formula>IF( OR(ISPICKVAL( Dates_Flights__c,&apos;Dates/Domestic Flights&apos;),ISPICKVAL( Dates_Flights__c,&apos;Dates/International Flights&apos;)) ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>has flights</label>
    <type>Checkbox</type>
</CustomField>