force-app/main/default/objects/Deal__c/fields/Has_Merchant_Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Has_Merchant_Portal_Access__c</fullName>
    <label>Has Merchant Portal Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>