force-app/main/default/objects/Deal__c/fields/Hide_Cart__c.field-meta.xml
<CustomField>
    <fullName>Hide_Cart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Cart</label>
    <type>Checkbox</type>
</CustomField>