force-app/main/default/objects/Deal__c/fields/Hide_Room_Options__c.field-meta.xml
<CustomField>
    <fullName>Hide_Room_Options__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Room Options</label>
    <type>Checkbox</type>
</CustomField>