force-app/main/default/objects/Deal__c/fields/Hide_TC_Portal__c.field-meta.xml
<CustomField>
    <fullName>Hide_TC_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide TC Portal</label>
    <type>Checkbox</type>
</CustomField>