force-app/main/default/objects/Deal__c/fields/Highlight_Label__c.field-meta.xml
<CustomField>
    <fullName>Highlight_Label__c</fullName>
    <label>Highlight Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>red-hot</fullName>
            </value>
            <value>
                <fullName>selling-fast</fullName>
            </value>
            <value>
                <fullName>limited-time</fullName>
            </value>
            <value>
                <fullName>last-minute</fullName>
            </value>
            <value>
                <fullName>last-chance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>