force-app/main/default/objects/Deal__c/fields/Highlight_ribbon_PDF__c.field-meta.xml
<CustomField>
    <fullName>Highlight_ribbon_PDF__c</fullName>
    <description>Used to capture values for the deal pdf 
eg 8 DAY FLY, TOUR &amp; CRUISE</description>
    <inlineHelpText>Used to capture values for the deal pdf 
eg 8 DAY FLY, TOUR &amp; CRUISE</inlineHelpText>
    <label>Highlight ribbon PDF</label>
    <length>50</length>
    <type>Text</type>
</CustomField>