force-app/main/default/objects/Deal__c/fields/Highlight_ribbon_PDF_NZ__c.field-meta.xml
<CustomField>
    <fullName>Highlight_ribbon_PDF_NZ__c</fullName>
    <label>Highlight ribbon PDF - NZ</label>
    <length>50</length>
    <type>Text</type>
</CustomField>