force-app/main/default/objects/Deal__c/fields/holdimage_for_community__c.field-meta.xml
<CustomField>
    <fullName>holdimage_for_community__c</fullName>
    <label>holdimage for community</label>
    <length>125</length>
    <type>Text</type>
</CustomField>