force-app/main/default/objects/Deal__c/fields/Hotel_Accom_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Accom_Booking_Date__c</fullName>
    <label>Hotel Accom Booking Date</label>
    <type>Date</type>
</CustomField>