force-app/main/default/objects/Deal__c/fields/Hotel_Accom_Booking_X_days_prior__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Accom_Booking_X_days_prior__c</fullName>
    <label>Hotel Accom Booking X days prior</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>