force-app/main/default/objects/Deal__c/fields/Hotel_Accom_Required__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Accom_Required__c</fullName>
    <label>Hotel Accom Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>