force-app/main/default/objects/Deal__c/fields/Hotel_City__c.field-meta.xml
<CustomField>
    <fullName>Hotel_City__c</fullName>
    <label>Hotel City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>