force-app/main/default/objects/Deal__c/fields/Hotel_Code__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Hotel Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>