force-app/main/default/objects/Deal__c/fields/Image4Conga__c.field-meta.xml
<CustomField>
    <fullName>Image4Conga__c</fullName>
    <label>Image4Conga</label>
    <length>200</length>
    <type>Text</type>
</CustomField>