force-app/main/default/objects/Deal__c/fields/Important_Information_Qantas__c.field-meta.xml
<CustomField>
    <fullName>Important_Information_Qantas__c</fullName>
    <label>Important Information - Qantas</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>