force-app/main/default/objects/Deal__c/fields/Inclusions__c.field-meta.xml
<CustomField>
    <fullName>Inclusions__c</fullName>
    <label>Inclusions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accom</fullName>
            </value>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>Flights</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Tour</fullName>
            </value>
            <value>
                <fullName>Transfers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>