force-app/main/default/objects/Deal__c/fields/Indicative_Flight_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Indicative_Flight_Pricing__c</fullName>
    <inlineHelpText>Please provide an overview of the flight requests for this deal to quickly see if the total deal price will stack up and you can proceed with the deal.</inlineHelpText>
    <label>Indicative Flight Pricing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>