force-app/main/default/objects/Deal__c/fields/Internal_flight_tickets_by_merchant__c.field-meta.xml
<CustomField>
    <fullName>Internal_flight_tickets_by_merchant__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick if any internal flights are ticketed by the merchant as opposed to TAD</inlineHelpText>
    <label>Internal flight tickets by merchant?</label>
    <type>Checkbox</type>
</CustomField>