force-app/main/default/objects/Deal__c/fields/is_domestic__c.field-meta.xml
<CustomField>
    <fullName>is_domestic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this deal centered around domestic travel locations?</inlineHelpText>
    <label>Is Domestic</label>
    <type>Checkbox</type>
</CustomField>