force-app/main/default/objects/Deal__c/fields/Is_Escapes__c.field-meta.xml
<CustomField>
    <fullName>Is_Escapes__c</fullName>
    <formula>IF(INCLUDES(  deal_type__c  , &apos;stay&apos;)  &amp;&amp;
 ( has_flights__c  = TRUE), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Escapes</label>
    <type>Checkbox</type>
</CustomField>