force-app/main/default/objects/Deal__c/fields/itinerary_10_label__c.field-meta.xml
<CustomField>
    <fullName>itinerary_10_label__c</fullName>
    <label>Itinerary 10 Label</label>
    <length>150</length>
    <type>Text</type>
</CustomField>