force-app/main/default/objects/Deal__c/fields/itinerary_1_label__c.field-meta.xml
<CustomField>
    <fullName>itinerary_1_label__c</fullName>
    <label>Itinerary 1 Label</label>
    <length>150</length>
    <type>Text</type>
</CustomField>