force-app/main/default/objects/Deal__c/fields/itinerary_information__c.field-meta.xml
<CustomField>
    <fullName>itinerary_information__c</fullName>
    <inlineHelpText>Deal specific information used in itineraries</inlineHelpText>
    <label>Itinerary Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>