force-app/main/default/objects/Deal__c/fields/itinerary_information_tc__c.field-meta.xml
<CustomField>
    <fullName>itinerary_information_tc__c</fullName>
    <label>Itinerary Information TC</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>