force-app/main/default/objects/Deal__c/fields/Itinerary_Outline__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Outline__c</fullName>
    <inlineHelpText>Please provide a detailed outline of the summary which the publishing team will expand on.</inlineHelpText>
    <label>Itinerary Outline</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>