force-app/main/default/objects/Deal__c/fields/Itinerary_Outline_NZ__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Outline_NZ__c</fullName>
    <label>Itinerary Outline - NZ</label>
    <type>TextArea</type>
</CustomField>