force-app/main/default/objects/Deal__c/fields/Itinerary_Outline_Proofed__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Outline_Proofed__c</fullName>
    <inlineHelpText>This field will be completed by the Product Analysts and then used by the Content and Publishing Team.</inlineHelpText>
    <label>Itinerary Outline - Proofed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>