force-app/main/default/objects/Deal__c/fields/Key_Callout__c.field-meta.xml
<CustomField>
    <fullName>Key_Callout__c</fullName>
    <inlineHelpText>Will appear in bold on an EDM</inlineHelpText>
    <label>Key Callout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>