force-app/main/default/objects/Deal__c/fields/Key_Merchant_Logo__c.field-meta.xml
<CustomField>
    <fullName>Key_Merchant_Logo__c</fullName>
    <label>Key Merchant Logo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Albatros Expeditions</fullName>
            </value>
            <value>
                <fullName>Amadeus River Cruises</fullName>
            </value>
            <value>
                <fullName>American Queen Voyages</fullName>
            </value>
            <value>
                <fullName>Aurora Expedition</fullName>
            </value>
            <value>
                <fullName>Azamara Cruises</fullName>
            </value>
            <value>
                <fullName>Captain Cook Cruises</fullName>
            </value>
            <value>
                <fullName>Carnival Cruises</fullName>
            </value>
            <value>
                <fullName>Celebrity Cruises</fullName>
            </value>
            <value>
                <fullName>Compagnie Fluviale du Mekong</fullName>
            </value>
            <value>
                <fullName>Coral Expeditions</fullName>
            </value>
            <value>
                <fullName>Costa Cruises</fullName>
            </value>
            <value>
                <fullName>Holland America Line</fullName>
            </value>
            <value>
                <fullName>Hurtigruten</fullName>
            </value>
            <value>
                <fullName>Miray Cruises</fullName>
            </value>
            <value>
                <fullName>MSC Cruises</fullName>
            </value>
            <value>
                <fullName>Norwegian Cruise Line</fullName>
            </value>
            <value>
                <fullName>P&amp;O Cruises</fullName>
            </value>
            <value>
                <fullName>Princess Cruises</fullName>
            </value>
            <value>
                <fullName>Qantas</fullName>
            </value>
            <value>
                <fullName>Qatar</fullName>
            </value>
            <value>
                <fullName>Rocky Mountaineer</fullName>
            </value>
            <value>
                <fullName>Royal Caribbean Cruises</fullName>
            </value>
            <value>
                <fullName>Silversea</fullName>
            </value>
            <value>
                <fullName>Singapore Airlines</fullName>
            </value>
            <value>
                <fullName>Sri Lanka</fullName>
            </value>
            <value>
                <fullName>Travel Marvel</fullName>
            </value>
            <value>
                <fullName>Cunard</fullName>
            </value>
            <value>
                <fullName>Sofitel Nusa Dua</fullName>
            </value>
            <value>
                <fullName>Swan Hellenic</fullName>
            </value>
            <value>
                <fullName>WindStar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>