force-app/main/default/objects/Deal__c/fields/Land_Activity_Report__c.field-meta.xml
<CustomField>
    <fullName>Land_Activity_Report__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;#/sObject/00O0K00000AkHMn/view?fv0=&quot;, 
&quot;/00O0K00000AkHMn?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Land Activity Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Land Activity Report</label>
    <type>Text</type>
</CustomField>