force-app/main/default/objects/Deal__c/fields/Landmark__c.field-meta.xml
<CustomField>
    <fullName>Landmark__c</fullName>
    <label>Landmark</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>