force-app/main/default/objects/Deal__c/fields/Last_Mod__c.field-meta.xml
<CustomField>
    <fullName>Last_Mod__c</fullName>
    <label>Last Mod</label>
    <type>DateTime</type>
</CustomField>