force-app/main/default/objects/Deal__c/fields/last_mod_time__c.field-meta.xml
<CustomField>
    <fullName>last_mod_time__c</fullName>
    <label>last mod time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>